--- a/css/style.css
+++ b/css/style.css
@@ -68,11 +68,18 @@ nav a{
 }
 
 /*vamos con el main */
-#reloj{
+section{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    gap:10px;
+}
+#reloj,#links,#contraseñas{
     padding: 50px 0px;
     font-size: 70px;
     display: flex;
     justify-content: center;
+    
 }
 .containerReloj{
     font-size: 25px;
@@ -93,15 +100,29 @@ nav a{
     text-shadow: 1px -4px 7px rgba(13,43,253,0.6); ;
 }
 
-#links{
-    margin: 150px 0px;
-    display: flex;
-    justify-content: center;
-}
 form{
+    display: flex;
     background-color: beige;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
-    padding: 15px;
+    padding: 10px;
+}
+legend{
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+label, input[type="text"]{
+    margin: 5px;
+}
+label{
+font-size: 16px;
+}
+input[type="text"]{
+    height: 15px;
+    width: auto;
+}
+button{
+    height: 25px;
+    width: 100px;
+    margin: 10px;
 }
