--- a/css/style.css
+++ b/css/style.css
@@ -65,39 +65,38 @@ nav a{
     font-size: 20px;
     font-weight: 600;
     padding: 0px 10px;
+    flex-wrap: nowrap;
 }
 
 /*vamos con el main */
 section{
-    display: flex;
-	no-wrap:wrap;
-    justify-content: space-between;
-    flex-direction: row;
     gap:10px;
+    flex-wrap: nowrap;
+    display: flex;
 }
 #reloj,#links,#contraseñas{
     padding: 50px 0px;
-    font-size: 70px;
-    display: flex;
-    justify-content: center;
-    
+    display: flex; 
+     width: 200px;
+    height:auto;
 }
 .containerReloj{
-    font-size: 25px;
+    font-size: 20px;
     border: 2px black solid;
     padding:20px;
     background-color: antiquewhite;
     font-style:initial;
+  
 }
 .divDia{
-    font-size: 50px;
-    padding-top: 20px;
+    font-size: 30px;
+    padding-top: 10px;
     font-weight: 600;
 }
 .divHora{  
-    padding: 20px 0px;
+    padding: 10px 0px;
     font-weight: 800;
-    font-size: 70px;
+    font-size: 30px;
     text-shadow: 1px -4px 7px rgba(13,43,253,0.6); ;
 }
 
@@ -129,4 +128,37 @@ button{
 }
 p{
     font-size: 14px;;
+}
+.divLink{
+    color: blue;
+    cursor: pointer;
+   background-color: aquamarine;
+   height:50px;
+   width: 75px;
+   border-radius: 10%;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-around; 
+   border: 2px rgba(255, 0, 0, 0.644) solid;
+}
+.divLink a{
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+text-align: center;
+}
+.btnLink{
+    margin-top: 5px;
+    margin-left: 50px;
+    font-size: 9px;
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    border-radius: 45%;
+}
+
+span{
+    color: rgb(250, 27, 27);
+    background-color: rgba(0, 255, 255, 0.356);
 }
