--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ header{
     justify-content: space-around;
     align-items: center;
     background: rgb(34,195,96);
-background: linear-gradient(0deg, rgba(34,195,96,1) 26%, rgba(181,142,41,1) 54%, rgba(187,39,39,1) 100%);
+background: rgba(0, 0, 0, 0.308);
 color: rgb(235, 224, 208);
 padding: 20px 0px;
 }
@@ -68,12 +68,13 @@ nav a{
     flex-wrap: nowrap;
 }
 img{
-    width: 30px;
+    width: 25px;
 }
 /*vamos con el main */
 main{
     display: flex;
     gap:10px;
+    justify-content: center;
 
 }
 #reloj,#links,#contraseñas,#clima{
@@ -143,20 +144,21 @@ button{
 .btnLink{
     font-size: 11px;
     width: 20px;
-    height: 20px;
+    height: auto;
     border-radius: 45%;
     color: aliceblue;
     background-color: rgba(0, 0, 0, 0.479);
     cursor: pointer;
     position: absolute;
-    left: 0;
-    top: 0;
+    right: -10px;
+   bottom: 18px;
+   
 }
 .divLink a{
     text-decoration: none;
     color: rgb(255, 255, 255);
     font-size: 20px;
-    text-align: center;
+    margin: 10px;
 }
 
 span{
