--- a/css/style.css
+++ b/css/style.css
@@ -77,12 +77,13 @@ main{
     justify-content: center;
 
 }
-#reloj,#links,#contraseñas,#clima{
+article{
     margin: 20px;
     background-color: rgba(0, 0, 0, 0.562);
     font-size: 20px;
     color: aliceblue;
     border: 2px rgba(255, 255, 255, 0.445) solid;
+    width: 300px;
 }
 .containerReloj{
     margin: 20px;
@@ -103,7 +104,6 @@ main{
 
 form{
     display: flex;
-
     justify-content: center;
     flex-direction: column;
     padding: 10px;
@@ -164,3 +164,45 @@ button{
 span{
     color: rgb(253, 4, 4);
 }
+
+.clima_profundo{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
+.climaXhoras {
+    max-width: 300px; /* Ancho máximo del contenedor */
+    overflow-x: auto; /* Habilitar el scroll horizontal cuando se excede el ancho */
+    white-space: nowrap; /* Evitar saltos de línea para que los elementos se muestren en una sola fila */
+}
+      
+      /* Estilos para los elementos dentro del contenedor horizontal */
+.climaXhoras > div {
+    display: inline-block; /* Mostrar elementos en línea uno al lado del otro */
+    margin: 10px; /* Espacio entre cada elemento */
+    vertical-align: top; /* Alinear elementos arriba */
+}
+
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+.climaXhoras{
+    scrollbar-width: auto;
+    scrollbar-color: #8f54a0#c7f0f5;
+  }
+
+  /* Chrome, Edge, and Safari */
+.climaXhoras::-webkit-scrollbar {
+    width: 16px;
+  }
+  
+.climaXhoras::-webkit-scrollbar-track {
+    background: #c7f0f5;
+  }
+.climaXhoras::-webkit-scrollbar-thumb {
+    background-color: #8f54a0;
+    border-radius: 10px;
+    border: 3px solid #c7f0f5;
+  }
